--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calculadora de Gastos por Data</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-white">
     <div class="flex flex-col items-center ">
         <div class="bg-white rounded-lg p-6 w-full text-center max-w-lg mb-8">
             <div class="flex justify-center items-center space-x-4">
